# SynapseOS

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  secret.yaml  service.yaml
src/synapseos/: __init__.py  main.py
src/synapseos/agents/: __init__.py  base.py  coder.py  executor.py  planner.py  researcher.py  reviewer.py  synthesizer.py
src/synapseos/api/: __init__.py  dependencies.py
src/synapseos/api/routes/: __init__.py  health.py  tasks.py
src/synapseos/core/: __init__.py  config.py  exceptions.py  logging.py
src/synapseos/graph/: __init__.py  workflow.py
src/synapseos/models/: __init__.py  agent.py  conversation.py  workflow.py
src/synapseos/services/: __init__.py  approvals.py  database.py  event_bus.py  llm.py  memory.py  task_manager.py  vector_store.py
tests/: conftest.py  test_agents.py  test_approvals.py  test_workflow.py
