[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapseos"
version = "0.1.0"
description = "Autonomous multi-agent AI orchestration platform built with FastAPI, LangGraph, Redis, PostgreSQL, and vector RAG."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Shiva Charan Teja", email = "shivacharanteja10@users.noreply.github.com" }
]
license = { text = "MIT" }
keywords = ["multi-agent", "langgraph", "fastapi", "rag", "ai-agents", "kubernetes"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "structlog>=24.2,<26.0",
  "langchain>=0.2,<1.0",
  "langchain-core>=0.2,<1.0",
  "langchain-openai>=0.1,<1.0",
  "langgraph>=0.2,<1.0",
  "redis>=5.0,<7.0",
  "SQLAlchemy>=2.0,<3.0",
  "asyncpg>=0.29,<1.0",
  "qdrant-client>=1.10,<2.0",
  "chromadb>=0.5,<1.0",
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.10,<2.0",
]

[project.urls]
Homepage = "https://github.com/shivacharanteja10"
Repository = "https://github.com/shivacharanteja10/SynapseOS"

[project.scripts]
synapseos = "synapseos.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = false
disable_error_code = [
  "arg-type",
  "call-overload",
  "misc",
  "no-any-return",
  "type-arg",
  "union-attr",
]
exclude = ["build", "dist"]
